--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-26 22:05+0300\n"
+"POT-Creation-Date: 2023-04-27 21:35+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,22 +16,24 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
-"(n%100>=11 && n%100<=14)? 2 : 3);\n"
-#: task_manager/templates/base.html:9 task_manager/templates/navbar.html:4
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
+"%100>=11 && n%100<=14)? 2 : 3);\n"
+
+#: task_manager/templates/form.html:7 task_manager/templates/index.html:6
+#: task_manager/templates/navbar.html:4
 msgid "Task Manager"
 msgstr "Менеджер задач"
 
-#: task_manager/templates/index.html:7
+#: task_manager/templates/index.html:11
 msgid "Welcome!"
 msgstr "Добро пожаловать!"
 
-#: task_manager/templates/index.html:9
+#: task_manager/templates/index.html:13
 msgid "Simple and flexible task management web application"
 msgstr "Простое веб-приложение для управления задачами"
 
-#: task_manager/templates/index.html:13
+#: task_manager/templates/index.html:16
 msgid "Learn more"
 msgstr "Узнать больше"
 
@@ -46,3 +48,23 @@ msgstr "Войти"
 #: task_manager/templates/navbar.html:8
 msgid "Sign up"
 msgstr "Регистрация"
+
+#: task_manager/users/views.py:13
+msgid "User created successfully"
+msgstr "Пользователь успешно создан"
+
+#: task_manager/users/views.py:15
+msgid "Registration"
+msgstr "Регистрация"
+
+#: task_manager/users/views.py:16
+msgid "Register"
+msgstr "Зарегистрироваться"
+
+#: task_manager/views.py:19
+msgid "You are logged in"
+msgstr "Вы залогинены"
+
+#: task_manager/views.py:21 task_manager/views.py:22
+msgid "Login"
+msgstr "Войти"
