--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -64,7 +64,7 @@ msgstr "Редактирование метки"
 #: task_manager/labels/views.py:42 task_manager/statuses/views.py:42
 #: task_manager/tasks/views.py:66 task_manager/users/views.py:46
 msgid "Submit changes"
-msgstr "Подтвердить изменения"
+msgstr "Изменить"
 
 #: task_manager/labels/views.py:52
 msgid "Label deleted successfully"
