--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-15 18:59+0000\n"
+"POT-Creation-Date: 2023-05-15 19:39+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,7 +25,7 @@ msgstr ""
 #: task_manager/templates/statuses/index.html:12
 #: task_manager/templates/tasks/index.html:14
 msgid "Name"
-msgstr "Название"
+msgstr "Имя"
 
 #: task_manager/labels/models.py:14 task_manager/templates/labels/index.html:13
 #: task_manager/templates/statuses/index.html:13
@@ -83,6 +83,10 @@ msgstr "Удаление метки"
 msgid "Yes, delete"
 msgstr "Да, удалить"
 
+#: task_manager/statuses/models.py:7 task_manager/tasks/models.py:10
+msgid "name"
+msgstr "Имя"
+
 #: task_manager/statuses/views.py:16 task_manager/templates/navbar.html:12
 #: task_manager/templates/statuses/index.html:5
 msgid "Statuses"
@@ -134,6 +138,22 @@ msgstr "Исполнитель"
 #: task_manager/tasks/filters.py:35
 msgid "Only my tasks"
 msgstr "Только мои задачи"
+
+#: task_manager/tasks/models.py:15
+msgid "Description"
+msgstr "Описание"
+
+#: task_manager/tasks/models.py:30
+msgid "status"
+msgstr "Статус"
+
+#: task_manager/tasks/models.py:37
+msgid "assignee"
+msgstr "Исполнитель"
+
+#: task_manager/tasks/models.py:44
+msgid "labels"
+msgstr "Метки"
 
 #: task_manager/tasks/views.py:20 task_manager/templates/navbar.html:10
 #: task_manager/templates/tasks/index.html:5
@@ -306,18 +326,18 @@ msgstr "Пользователь успешно удалён"
 msgid "Deleting user"
 msgstr "Удаление пользователя"
 
-#: task_manager/views.py:19
+#: task_manager/views.py:20
 msgid "You are logged in"
 msgstr "Вы залогинены"
 
-#: task_manager/views.py:21
+#: task_manager/views.py:22
 msgid "Authorisation"
 msgstr "Вход"
 
-#: task_manager/views.py:22
+#: task_manager/views.py:23
 msgid "Login"
 msgstr "Войти"
 
-#: task_manager/views.py:31
+#: task_manager/views.py:32
 msgid "You're logged out."
 msgstr "Вы разлогинены"
