--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -68,7 +68,7 @@ msgstr "Изменить"
 
 #: task_manager/labels/views.py:52
 msgid "Label deleted successfully"
-msgstr "Метка успешно создана"
+msgstr "Метка успешно удалена"
 
 #: task_manager/labels/views.py:55
 msgid "You can't delete this label, because some task is using it"
