--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -137,7 +137,7 @@ msgstr "Исполнитель"
 
 #: task_manager/tasks/filters.py:35
 msgid "Only my tasks"
-msgstr "Только мои задачи"
+msgstr "Только свои задачи"
 
 #: task_manager/tasks/models.py:15
 msgid "Description"
