--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -128,7 +128,7 @@ msgstr "Статус"
 
 #: task_manager/tasks/filters.py:23
 msgid "Label"
-msgstr "Метки"
+msgstr "Метка"
 
 #: task_manager/tasks/filters.py:29 task_manager/templates/tasks/index.html:17
 #: task_manager/templates/tasks/show.html:27
