--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -111,7 +111,7 @@ msgstr "Редактирование статуса"
 
 #: task_manager/statuses/views.py:52
 msgid "Status deleted successfully"
-msgstr "Статус успешно удалён"
+msgstr "Статус успешно удален"
 
 #: task_manager/statuses/views.py:55
 msgid "You can't delete this status, because some task is using it"
@@ -320,7 +320,7 @@ msgstr "Пользователей не может быть удален, т.к.
 
 #: task_manager/users/views.py:61
 msgid "User deleted successfully"
-msgstr "Пользователь успешно удалён"
+msgstr "Пользователь успешно удален"
 
 #: task_manager/users/views.py:64
 msgid "Deleting user"
